<resources>
    <string name="app_name">Pop Movies</string>
    <string name="sort">Sort</string>
    <string name="oneMore">One more</string>
    <string name="popular">Popular movies</string>
    <string name="top_rated">Top-rated movies</string>
    <string name="play_trailer">Play trailer</string>
    <string name="open_map">Open map</string>
    <string name="share_movie">Share movie</string>
    <string name="average_vote">Average vote:</string>
    <string name="search">Search</string>
    <string name="search_hint">Type the movie name</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="my_favorite_movies">My favorite movies</string>
    <string name="settings">Settings</string>
    <string name="background_settings_key" translatable="false">background_color</string>
    <string name="remove_from_favorites">Remove from favorites</string>
</resources>
