<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:id="@+id/information_scroll_view">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/details_movie_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="10dp"/>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/details_movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_margin="20dp"/>

        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/details_movie_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/details_movie_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/average_vote"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/details_movie_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="25sp"
                android:textStyle="italic"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_favorites"
                android:id="@+id/add_to_favorites"
                android:onClick="onClickAddToFavorites"/>
            <Button
                android:id="@+id/remove_from_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_from_favorites"
                android:onClick="onClickRemoveFromFavorites"/>
        </LinearLayout>
    </LinearLayout>
        <TextView
            android:id="@+id/details_movie_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="20sp"/>
    </LinearLayout>
</ScrollView>